Integrate precipitation probability in demand forecast
Added precipitation probability to enhance demand forecasting accuracy and adjusted logic to account for holidays and weekends. Implemented a +5% boost for top products under high precipitation conditions and improved inventory auto-reorder mechanisms for optimized stock management.